src/test/deca/syntax/valid/int.deca
// Description:
//    Minimalistic program to test int operations.
//
// Results:
//    None
//
// History:
//    Created on 19/01/2025
{
    int a = 4;
    int b = 2;
    print(a + b, a * b, a / b);
}
